--- a/index.css
+++ b/index.css
@@ -16,3 +16,32 @@ footer{
     background-color: #ccc;
     border: 1px solid #ccc;
 }
+
+.hnje{
+    font-family: "Times New Roman";  
+    font-size: 24px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 20px;
+    padding: 10px;
+}
+
+.gallery{
+    margin: 50px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 260px;
+    height: 360px;
+}
+.gallery img{
+    width: 100%;
+    height: auto;
+}
+.desc{
+    padding: 15px;
+    text-align: center;
+}
+.tabela{
+    margin: -22px;
+    padding: -11px;
+}
