--- a/index.css
+++ b/index.css
@@ -147,3 +147,13 @@ footer{
 #rrjetetSociale3{
      margin-left:35px;
 }
+
+.header2{
+position: relative;
+float: left;
+
+
+}
+.psh table{
+  position: relative;
+}
