--- a/faqet-tjera/produktetsigurimeve.css
+++ b/faqet-tjera/produktetsigurimeve.css
@@ -1,3 +1,11 @@
+div{
+	margin: 0px;
+}
+body{
+	  font-family: 'Work Sans', sans-serif;
+
+}
+
 header{
   background-color:#ffffff;
 
@@ -35,14 +43,14 @@ nav a{
 	font-size: 14px;
 }
 nav a:hover{
-	color: #fcaa62;
+	color: #e5192c;
 }
 nav a::before{
 	content: '';
 	display: block;
 	height: 5px;
 	width: 100%;
-	background-color:#fcaa62;
+	background-color:#e5192c;
 
 	position:absolute;
 	top: 0;
@@ -58,6 +66,8 @@ nav a:hover::before{
 
 	width: 90%;
 
+
+
 }
 .logo1{
 	height: 50px;
@@ -66,3 +76,56 @@ nav a:hover::before{
 	padding-bottom: 5px;
 	padding-left: 50px;
 }
+
+
+/* Pas Navigation Bar */
+
+body{
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+}
+
+.thing1{
+	height: 500px;
+	position: relative;
+	width: 100%;
+}
+
+.thing1 img{
+	width: 100%;
+
+}
+.thing2{
+	background: #e5192c;
+	color:#fff;
+	height: 500px;
+	padding-top: 100px;
+	position: relative;
+	text-align: center;
+	width: 100%;
+}
+
+.thing2 h1{
+	font-size: 30px;
+	text-transform: uppercase;
+	padding-top: 0px;
+	margin-left: 0px;
+
+}
+.thing2 p{
+	padding: 150px;
+}
+
+.thing2::after{
+	position: absolute;
+	content: '';
+	width: 60%;
+	height: 125px;
+	top: -50px;
+	left: 0;
+	background: #e5192c;
+	transform: skewY(7deg);
+
+}
+
