--- a/index.css
+++ b/index.css
@@ -92,6 +92,55 @@ footer{
     border: 1px solid #ccc;
 }
 
+#wrap
+            {
+                width: 100%;
+                height: 235px;
+                background-color: dimgrey;
+                letter-spacing: 1px;
+            }
+            .left
+            {
+             width: 35%;
+             height: 100%;
+             float: left;
+            }
+            .right
+            {
+                width: 55%;
+                height: 100%;
+                float: right;
+            }
+            
+:placeholder-shown {
+    background: #33302e;
+    
+}
+::placeholder { 
+    color : white;
+    opacity: 1;
+}
+
+.rrjetetSociale     
+{
+    margin : 30px 0 0 20px ;
+}
+#rrjetetSociale1
+{
+    margin-left:30px;
+}
+#rrjetetSociale2{
+    margin-left: 30px;
+}
+#rrjetetSociale3{
+     margin-left:35px;
+}
+.paragrafi
+{
+    font-family: courier;
+    
+}
+
 .hnje{
     font-family: "Times New Roman";  
     font-size: 40px;
