--- a/index.css
+++ b/index.css
@@ -178,6 +178,12 @@ footer{
 
 .fdiv
             {
+                background-image: url("earth.png");
+                background-attachment: fixed;
+                background-position: 45% 96%;
+                 background-repeat: no-repeat;
+                 background-size: 1700px 440px;
+                 
                 background-color: dimgrey;
                 width: 100%; height: 400px;
             }
