--- a/index.css
+++ b/index.css
@@ -178,7 +178,7 @@ footer{
 
 .fdiv
             {
-                background-image: url("earth.png");
+                background-image: url("foto/earth.png");
                 background-attachment: fixed;
                 background-position: 45% 96%;
                  background-repeat: no-repeat;
