--- a/rrethnesh.css
+++ b/rrethnesh.css
@@ -1,1 +1,112 @@
+ a {
+      text-decoration: none;
+    }
+        .my-text
+        {
+            float: left;
+            margin-left: 250px;
+        }
+html body{
+  margin:0;
+  padding:0;
+}
+body{
+	  font-family: 'Work Sans', sans-serif;
 
+}
+
+header{
+  background-color:#fff;
+  position: fixed;
+  width: 100%;
+
+}
+
+header::after{
+	content: '';
+	display: table;
+	clear: both;
+}
+
+nav{
+
+	float: right;
+}
+
+
+nav ul{
+	margin:40px;
+
+	padding: 0;
+	list-style: none;
+}
+nav li{
+	display: inline-block;
+	margin-left: 50px;
+	padding-top:22px;
+	position: relative;
+	text-decoration-style: none;
+}
+nav a{
+	color: green;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 14px;
+}
+nav a:hover{
+	color: #fcaa62;
+}
+nav a::before{
+	content: '';
+	display: block;
+	height: 5px;
+	width: 100%;
+	background-color:#fcaa62;
+
+	position:absolute;
+	top: 0;
+	width: 0%;
+
+	transition: all ease-in-out 500ms;
+}
+
+nav a:hover::before{
+	width: 100%;
+}
+
+.logo1{
+	height: 50px;
+	float: left;
+	padding-top: 0px;
+	padding-bottom: 5px;
+	padding-left: 50px;
+}
+.container{
+    max-height: 200px;
+    margin: auto;
+    background: #f2f2f2;
+}
+footer{
+    padding: 10px;
+    font-size: 12px;
+    text-align: left;
+    background: #33302e;
+    color: white;
+    font-family: Arial;
+    letter-spacing: 1px;
+}
+.banner
+{
+    background: url("foto/abautuss.jpg") no-repeat;
+    align-content: center;
+}
+.smallpost img {
+	float: left;
+	margin-right: 5px;
+}
+.cereku {
+	display: inline;
+	list-style-type: none;
+	margin:0 20px 0 0;
+}
+  
