--- a/index.css
+++ b/index.css
@@ -94,9 +94,9 @@ footer{
 
 #wrap
             {
+	        background-color: #222222;
                 width: 100%;
                 height: 235px;
-                background-color: dimgrey;
                 letter-spacing: 1px;
             }
             .left
@@ -107,6 +107,7 @@ footer{
             }
             .right
             {
+		color: #c8c8c8;    
                 width: 55%;
                 height: 100%;
                 float: right;
