--- a/rrethnesh.css
+++ b/rrethnesh.css
@@ -97,16 +97,51 @@ footer{
 }
 .banner
 {
-    background: url("foto/abautuss.jpg") no-repeat;
-    align-content: center;
+    background: url("about.jpg") no-repeat center center;
+    background-size: cover;
 }
-.smallpost img {
-	float: left;
-	margin-right: 5px;
-}
-.cereku {
-	display: inline;
-	list-style-type: none;
-	margin:0 20px 0 0;
+ #wrap
+            {
+                background-color: #f4f4f5;
+                width: 100%;
+                height: 1200px;
+                letter-spacing: 1px;
+            }
+.left
+  {
+                background-color: #f4f4f5;
+             width: 15%;
+             height: 35%;
+             float: left;
+             margin-top: 5%;
+             margin-left: 70px;
+              font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+            font-size: 18px;
+            }
+            .right
+            {
+                background-color: #f4f4f5;
+                width: 70%;
+                height: 100%;
+                float: right;
+            }
+            .center
+            {
+                background-color: white;
+             width: 80%;
+             height: 77%;
+             margin: 70px 0 20px 0;   
+              font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+            font-size: 15px;
+            }
+.center1
+{
+ background-color: white;
+ width: 85%;
+ height: 85%;
+ margin-left: 30px;
+ font-family: "Open Sans", Arial, sans-serif;
+ color: #68686c;
+ font-size: 15px;
 }
   
