--- a/rrethnesh.css
+++ b/rrethnesh.css
@@ -97,7 +97,7 @@ footer{
 }
 .banner
 {
-    background: url("about.jpg") no-repeat center center;
+    background: url("foto/about.jpg") no-repeat center center;
     background-size: cover;
 }
  #wrap
