--- a/faqet-tjera/shpallje.css
+++ b/faqet-tjera/shpallje.css
@@ -223,7 +223,7 @@ nav a:hover::before{
 	text-transform: uppercase;
 }
 footer{
-	background: #1d1d1d;
+	background: #2C3335;
 	padding: 30px 0;
 }
 .single-footer p{
