--- a/kontakti.css
+++ b/kontakti.css
@@ -164,44 +164,21 @@ nav a:hover::before{
                     70%{background: blue; left: 0px; top: 200px}
                     100%{background: red; left: 0px; top: 0px}
                 }
-#wrap
-{
-    width: 100%;
-    height: 260px;
-    background-color: #e4dfff; 
-    letter-spacing: 1px;
-}
-.left
-{padding: 4px 0 0 4px;
-    width: 26%;
-    height: 100%;
-    float: left;
-}
-.right
-{
-    width: 70%;
-    height: 100%;
-    float: right;
-}
-h5
-{
-    font-family: Trebuchet MS;
-}
-
 .fdiv
             {
-                width: auto; height: auto;
+                background-image: url("foto/earth.png");
+                background-attachment: fixed;
+                background-position: 45% 96%;
+                background-repeat: no-repeat;
+                background-size: 1700px 440px;
+                background-color: dimgrey;
+                width: 100%; height: 400px;
             }
            .fdiv1
            {
                float: left;
                width: 25%; 
                height: 400px;
-           }
-           #dh3
-           {
-               text-transform: uppercase;
-               font-family: Times;
            }
 
            #back-to-top {
