--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ footer{
             {
 	        background-color: #222222;
                 width: 100%;
-                height: 235px;
+                height: 265px;
                 letter-spacing: 1px;
             }
             .left
@@ -143,19 +143,20 @@ footer{
 }
 
 .hnje{
-    font-family: "Times New Roman";  
+    font-family:  sans-serif;
     font-size: 40px;
     font-weight: bold;
-    margin-left: 30px;
-    margin: 20px;
+    margin-left: 70px;
     padding: 10px;
+    color:#424439;
 }
 
 .gallery{
     margin: 50px;
+    margin-bottom: 0px;
     float: left;
     width: 260px;
-    height: 500px;
+    height: 300px;
 }
 .gallery img{
     width: 100%;
@@ -180,7 +181,7 @@ footer{
 {
     width: 100%;
     height: 366px;
-    background-color: #e4dfff; 
+    background-color: #dfe0de; 
     letter-spacing: 1px;
 }
 .left1
