--- a/kontakti.css
+++ b/kontakti.css
@@ -86,6 +86,7 @@ nav a:hover::before{
 }
 #wrap1
 {
+    background-image: url("foto/b.jpg");
     width: 100%;
     height: 700px;
     background-color: #ffffff; 
@@ -127,7 +128,7 @@ nav a:hover::before{
 }
 .fdiv
             {
-                background-image: url("foto/earth.png");
+                background-image: url("foto/bk.jpg");
                 background-attachment: fixed;
                 background-position: 45% 96%;
                 background-repeat: no-repeat;
