--- a/kontakti.css
+++ b/kontakti.css
@@ -155,7 +155,7 @@ footer
     padding: 10px;
     font-size: 12px;
     text-align: left;
-    background: #33302e;
+    background: #00002a;
     color: white;
     font-family: Arial;
     letter-spacing: 1px;
