--- a/kontakti.css
+++ b/kontakti.css
@@ -128,6 +128,7 @@ nav a:hover::before{
 }
 .fdiv
             {
+		color: white;
                 background-image: url("foto/bk.jpg");
                 background-attachment: fixed;
                 background-position: 45% 96%;
