--- a/faqet-tjera/lexoCSS/lexo2.css
+++ b/faqet-tjera/lexoCSS/lexo2.css
@@ -97,7 +97,7 @@ footer{
 }
 .banner
 {
-    background: url("foto/shendeti.jpg") no-repeat center center;
+    background: url("../../foto/udhetimi.jpg") no-repeat center center;
     background-size: cover;
 }
  #wrap
