--- a/faqet-tjera/CSS/shpallje.css
+++ b/faqet-tjera/CSS/shpallje.css
@@ -94,7 +94,7 @@ nav a:hover::before{
 
 /*------------------------------------*/
 .banner{
-	background: url("../../foto/foto2.jpg") no-repeat center center;
+	background: url("../foto/foto2.jpg") no-repeat center center;
 	-webkit-background-size:cover;
 	background-size: cover;
 }
