--- a/faqet-tjera/CSS/kontakti.css
+++ b/faqet-tjera/CSS/kontakti.css
@@ -86,7 +86,7 @@ nav a:hover::before{
 }
 #wrap1
 {
-    background-image: url("foto/b.jpg");
+    background-image: url("../foto/b.jpg");
     width: 100%;
     height: 700px;
     background-color: #ffffff; 
@@ -129,7 +129,7 @@ nav a:hover::before{
 .fdiv
             {
 		color: white;
-                background-image: url("foto/bk.jpg");
+                background-image: url("../foto/bk.jpg");
                 background-attachment: fixed;
                 background-position: 45% 96%;
                 background-repeat: no-repeat;
